2010-10-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-set-local-parameters): Ignore the `active'
	non-variable, too.

	* nnimap.el (nnimap-open-connection): Use gnutls STARTTLS, if
	available.
	(nnimap-update-info): Rely more on the current active than the param
	active to avoid marking articles as read too much.

	* auth-source.el (auth-source-create): Use (user-login-name) for the
	user name default.

	* nnimap.el (nnimap-update-info): If the server doesn't return any
	useful info, just use the previous info.
	(nnimap-update-info): Prefer old info over start-article.
	(nnimap-update-qresync-info): Finish implementing QRESYNC.

2010-10-10  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (autoload): Clean up autoloads.
	(nnir-imap-default-search-key): Renamed from
	nnir-imap-search-field. Use key rather than value.
	(nnir-imap-search-other): New variable.
	(nnir-read-parm): Use it.
	(nnir-imap-expr-to-imap): Use %S rather than imap-quote-specials.
	(gnus-summary-nnir-goto-thread): Modify to work with imap.

2010-10-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-wait-for-response): If the user hits `C-g', kill
	the process, too.

2010-10-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* spam.el (gnus-summary-mode-map): Bind to "$".  Suggested by Russ
	Allbery.

	* shr.el: Rework the way things are indented by <li> slightly.

	* gnus.el (gnus-group-set-parameter): Fix typo.

	* nnimap.el: Start implementing QRESYNC support.

2010-10-09  Julien Danjou  <julien@danjou.info>

	* nnir.el (nnir-engines): Fix too many arguments.

2010-10-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnmail.el (nnmail-expiry-target-group): Say that every expiry target
	group is the "last", so that the backends like nnfolder actually save
	their folders.

	* nnimap.el (nnimap-open-connection): If we have gnutls loaded, then
	try to use that for the tls stream.
	(nnimap-retrieve-group-data-early): Rework the marks code to heed