@@ -1,5 +1,8 @@
 2010-10-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* nnimap.el (nnimap-update-qresync-info): \Flagged messages are read
+	for Gnus.
+
 	* gnus-sum.el (gnus-summary-set-local-parameters): Ignore the `active'
 	non-variable, too.
 
